# CCDash

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .mcp.json  .npmrc  App.tsx  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  STATE.md  constants.ts  docker-compose.yml  index.html  index.tsx  metadata.json  package-lock.json  package.json  planning-tokens.css  projects.json  pyproject.toml  tailwind.config.js  types.ts  vite.config.ts  vitest.config.ts  wiki-spec.md
.claude/: .skillmeat-deployed.toml  .skillmeat-project.toml  settings.json
.codex/: agents  skills
ai/: symbols-api-cores.json  symbols-api-repositorys.json  symbols-api-routers.json  symbols-api-schemas.json  symbols-api-services.json  symbols-api.backup.json
backend/: config.py  data_domain_layout.py  data_domains.py  date_utils.py  document_linking.py  enterprise_scope_contract.py  env_bootstrap.py  link_audit.py  main.py  model_identity.py  models.py  project_manager.py  request_scope.py  requirements.txt  runtime_ports.py  session_badges.py  session_mappings.py  verify_db_layer.py  verify_projects.py  worker.py
ccdash.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
components/: AddProjectModal.tsx  BlockingFeatureList.tsx  CodebaseExplorer.tsx  Dashboard.tsx  DependencyStateBadge.tsx  DocumentModal.tsx  ExecutionGateCard.tsx  FamilySequenceLane.tsx  FamilySummaryCard.tsx  FeatureExecutionWorkbench.tsx  IngestHealthBadge.tsx  LandingPage.tsx  Layout.tsx  OpsPanel.tsx  PlanCatalog.tsx  ProjectBoard.tsx  ProjectSelector.tsx  SessionAnalyticsModal.tsx  SessionCard.tsx  (+11 more)
(+2156 files in other folders)
