[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccdash"
version = "0.1.0"
description = "CCDash Python backend and CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ccdash = "backend.cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
namespaces = true
