[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccdash"
version = "0.2.0"
description = "CCDash Python backend and CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ccdash = "backend.cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
namespaces = true

[tool.pytest.ini_options]
markers = [
    "perf: performance and benchmark tests (may be long-running; use CCDASH_PERF_DURATION_SECONDS to control duration)",
]
